--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
+        android:background="@drawable/background"
         >
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/clover_music_bottomLayout"
+            android:background="@color/white"
+            >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="#9933FA"
+                />
+
+        <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@mipmap/icon_song"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:id="@+id/clover_music_bottom_iv_icon"
+                />
+
+        <TextView
+                android:id="@+id/clover_music_bottom_tv_song"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/music_name"
+                android:layout_toEndOf="@id/clover_music_bottom_iv_icon"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                />
+
+        <TextView
+                android:id="@+id/clover_music_bottom_tv_singer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/music_author"
+                android:textSize="12sp"
+                android:layout_below="@id/clover_music_bottom_tv_song"
+                android:layout_alignStart="@id/clover_music_bottom_tv_song"
+                android:layout_marginTop="3dp"
+                />
+
+        <ImageView
+                android:id="@+id/clover_music_bottom_iv_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/icon_next"
+                android:layout_marginEnd="10dp"
+                />
+
+        <ImageView
+                android:id="@+id/clover_music_bottom_iv_play"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/icon_play"
+                android:layout_toStartOf="@id/clover_music_bottom_iv_next"
+                android:layout_marginRight="20dp"
+                />
+
+        <ImageView
+                android:id="@+id/clover_music_bottom_iv_last"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/icon_last"
+                android:layout_toStartOf="@id/clover_music_bottom_iv_play"
+                android:layout_marginEnd="20dp"
+                />
+    </RelativeLayout>
+    
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/clover_music_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/clover_music_bottomLayout">
+
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+</RelativeLayout>
