--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,97 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/main"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        android:background="@drawable/background"
-        >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/background"
+                tools:context=".MainActivity">
 
     <RelativeLayout
+            android:id="@+id/clover_music_bottomLayout"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_alignParentBottom="true"
-            android:id="@+id/clover_music_bottomLayout"
-            android:background="@color/white"
-            >
+            android:background="@color/white">
 
         <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="#9933FA"
-                />
+                android:background="#9933FA" />
 
         <ImageView
+                android:id="@+id/clover_music_bottom_iv_icon"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@mipmap/icon_song"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
-                android:id="@+id/clover_music_bottom_iv_icon"
-                />
+                android:src="@mipmap/icon_song" />
 
         <TextView
                 android:id="@+id/clover_music_bottom_tv_song"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/music_name"
                 android:layout_toEndOf="@id/clover_music_bottom_iv_icon"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/song"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
 
         <TextView
                 android:id="@+id/clover_music_bottom_tv_singer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/music_author"
-                android:textSize="12sp"
                 android:layout_below="@id/clover_music_bottom_tv_song"
                 android:layout_alignStart="@id/clover_music_bottom_tv_song"
                 android:layout_marginTop="3dp"
-                />
+                android:text="@string/singer"
+                android:textSize="12sp" />
 
-        <ImageView
-                android:id="@+id/clover_music_bottom_iv_next"
+        <!-- 按钮组 -->
+        <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:src="@mipmap/icon_next"
-                android:layout_marginEnd="10dp"
-                />
+                android:orientation="horizontal">
 
-        <ImageView
-                android:id="@+id/clover_music_bottom_iv_play"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:src="@mipmap/icon_play"
-                android:layout_toStartOf="@id/clover_music_bottom_iv_next"
-                android:layout_marginRight="20dp"
-                />
+            <!-- 上一首按钮 -->
+            <ImageView
+                    android:id="@+id/clover_music_bottom_iv_last"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginEnd="10dp"
+                    android:src="@mipmap/icon_last" />
 
-        <ImageView
-                android:id="@+id/clover_music_bottom_iv_last"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:src="@mipmap/icon_last"
-                android:layout_toStartOf="@id/clover_music_bottom_iv_play"
-                android:layout_marginEnd="20dp"
-                />
+            <!-- 播放按钮 -->
+            <ImageView
+                    android:id="@+id/clover_music_bottom_iv_play"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginEnd="10dp"
+                    android:src="@mipmap/icon_play" />
+
+            <!-- 下一首按钮 -->
+            <ImageView
+                    android:id="@+id/clover_music_bottom_iv_next"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@mipmap/icon_next" />
+
+        </LinearLayout>
+
     </RelativeLayout>
-    
-    <androidx.recyclerview.widget.RecyclerView
+
+    <android.support.v7.widget.RecyclerView
             android:id="@+id/clover_music_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/clover_music_bottomLayout">
-
-
-    </androidx.recyclerview.widget.RecyclerView>
+            android:layout_above="@id/clover_music_bottomLayout" />
 
 </RelativeLayout>
