--- a/app/src/main/res/layout/item_clover_music.xml
+++ b/app/src/main/res/layout/item_clover_music.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
                 android:id="@+id/item_local_music_song"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="玫瑰花的葬礼"
+                android:text="@string/song"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_toEndOf="@id/item_local_music_num"
@@ -37,7 +37,7 @@
                 android:id="@+id/item_local_music_singer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="许嵩"
+                android:text="@string/singer"
                 android:layout_below="@id/item_local_music_song"
                 android:layout_alignStart="@id/item_local_music_song"
                 android:layout_marginTop="10dp"
@@ -75,4 +75,4 @@
                 android:textSize="14sp"
                 android:textColor="#888"/>
     </RelativeLayout>
-</androidx.cardview.widget.CardView>
+</android.support.v7.widget.CardView>
